# planetb-syntax-highlighter

./: .dockerignore  .gitignore  .gitpod.Dockerfile  .gitpod.yml  235.codestyle.js  CNAME  Cargo.toml  Containerfile  Dockerfile  README.md  SyntaxHighlighter-2d05df1968533101.css  Trunk.toml  bootstrap.js  codestyle.js  codestyle.js.LICENSE.txt  codestyle.wasm  index.html  manifest.webmanifest  material-kit.min-138480080315163d.css  material-kit.min-a28a9eced6061f1c.css  nucleo-icons.min-43925e4dac34acca.css  package-lock.json  package.json  planetb-syntax-highligher-1cb9aec8dd698d55.js  planetb-syntax-highligher-1cb9aec8dd698d55_bg.wasm  planetb-syntax-highligher-1f0e144a518e1905.js  planetb-syntax-highligher-1f0e144a518e1905_bg.wasm  planetb-syntax-highligher-404f50222dbcc0e9.js  planetb-syntax-highligher-404f50222dbcc0e9_bg.wasm  planetb-syntax-highligher-4f4ef640fbea2aaa.js  planetb-syntax-highligher-4f4ef640fbea2aaa_bg.wasm  planetb-syntax-highligher-b467111799c7ffa4.js  planetb-syntax-highligher-b467111799c7ffa4_bg.wasm  planetb-syntax-highligher-cbe29881dcc99819.js  planetb-syntax-highligher-cbe29881dcc99819_bg.wasm  planetb-syntax-highligher-cccf9ec2b035930a.js  planetb-syntax-highligher-cccf9ec2b035930a_bg.wasm  planetbb-syntax-highligher-af58e05078a1df.js  planetbb-syntax-highligher-af58e05078a1df_bg.wasm  planetbb-syntax-highligher-b32cafd442eb882a.js  (+4 more)
.github/workflows/: build.yml  check.yml  codeql-analysis.yml  docker.yml  release.yml  semgrep.yml
src/: app.rs  main.rs
src/app/: highlighter.rs
src/assets/css/: material-kit.css  material-kit.min.css  nucleo-icons.min.css  opensans.css
src/assets/js/: fontAwesome.js  material-kit.js  material-kit.min.js
src/highligher/source/: SyntaxHighlighter.scss  index.js  shBrushJScript.js  shBrushPython.js  shBrushVb.js  shCore.js
src/highlighter/: README.md  index.js
src/highlighter/source/: SyntaxHighlighter.css  index.js  shBrushCSharp.js  shBrushDelphi.js  shBrushPhp.js  shBrushRuby.js  shBrushSql.js  (+1 more)
src/utils/: highlighter.rs  images.rs  mod.rs
static/: index.html
(+11 files in other folders)
