[package]
name = "planetb-syntax-highligher"
version = "0.1.10"
authors = ["Christof Weickhardt <christof@weickhardt.ch"]
edition = "2021"

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = 'fat'

[dependencies]
log = "0.4.18"
serde = "1.0.163" 
serde_derive = "1.0.162"  
wasm-bindgen = "0.2.86" 
wasm-logger = "0.2.0"
yew = {version="0.20.0", features=["csr"]} 
gloo-storage = "0.2.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.36"

[dependencies.web-sys]
version = "0.3.63"
features = [
  'KeyboardEvent',
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'InputEvent',
  'HtmlImageElement'
]
