[package]
name = "planetb-syntax-highligher"
version = "0.1.10"
authors = ["Christof Weickhardt <christof@weickhardt.ch"]
edition = "2021"

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = 'fat'

[dependencies]
log = "0.4.21"
serde = "1.0.197" 
serde_derive = "1.0.197"  
wasm-bindgen = "0.2.91" 
wasm-logger = "0.2.0"
yew = {version="0.21.0", features=["csr"]} 
gloo-storage = "0.3.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.41"

[dependencies.web-sys]
version = "0.3.68"
features = [
  'KeyboardEvent',
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'InputEvent',
  'HtmlImageElement'
]
